Fixed wrong language domain in archive-title component and fixed the z-index for the cart styling.

--- a/src/assets/less/atoms/cart.less
+++ b/src/assets/less/atoms/cart.less
@@ -7,6 +7,7 @@
     border-left: 1px solid #eee;
     border-right: 1px solid #eee;
     position: relative;
+    z-index: 9;
     i.fa {
         font-size: 1.2em;
         margin-left: 0;
